# tdlib-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
tdgrand/: Cargo.toml  build.rs
tdgrand-tl-gen/: Cargo.toml
tdgrand-tl-gen/src/: client.rs  enums.rs  functions.rs  grouper.rs  lib.rs  metadata.rs  rustifier.rs  structs.rs  types.rs
tdgrand-tl-parser/: Cargo.toml
tdgrand-tl-parser/src/: errors.rs  lib.rs  tl_iterator.rs  utils.rs
tdgrand-tl-parser/src/tl/: definition.rs  flag.rs  mod.rs  parameter.rs  parameter_type.rs  ty.rs
tdgrand/examples/: get_me.rs
tdgrand/src/: client.rs  client_manager.rs  generated.rs  lib.rs  observer.rs  tdjson.rs
tdlib/: Cargo.toml  build.rs
tdlib-tl-gen/: Cargo.toml
tdlib-tl-gen/src/: enums.rs  functions.rs  lib.rs  metadata.rs  rustifier.rs  types.rs
tdlib-tl-parser/: Cargo.toml
tdlib-tl-parser/src/: errors.rs  lib.rs  tl_iterator.rs
tdlib-tl-parser/src/tl/: category.rs  definition.rs  mod.rs  parameter.rs  ty.rs
tdlib/examples/: get_me.rs
tdlib/src/: generated.rs  lib.rs  observer.rs  tdjson.rs
