[package]
name = "tdgrand"
version = "0.1.0"
authors = ["Marco Melorio <marco.melorio@protonmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
once_cell = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tdgrand-tl-gen = { path = "../tdgrand-tl-gen", version = "0.1" }
tdgrand-tl-parser = { path = "../tdgrand-tl-parser", version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
