[package]
name = "tdgrand"
version = "0.1.0"
authors = ["Marco Melorio <marco.melorio@protonmail.com>"]
edition = "2018"

[features]
default = ["bots-only-api"]
bots-only-api = []

[dependencies]
log = "0.4"
futures-channel = "0.3"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.12"

[build-dependencies]
tdgrand-tl-gen = { path = "../tdgrand-tl-gen", version = "0.1" }
tdgrand-tl-parser = { path = "../tdgrand-tl-parser", version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
