[package]
name = "tdlib-tl-gen"
version = "0.3.0"
authors = ["Marco Melorio <marco.melorio@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/melix99/tdlib-rs"
repository = "https://github.com/melix99/tdlib-rs"
documentation = "https://docs.rs/tdlib-tl-gen"
description = """
Rust code generator from TDLib's API definitions.
"""

[dependencies]
tdlib-tl-parser = { path = "../tdlib-tl-parser", version = "0.2" }
