[package]
name = "tdlib-tl-parser"
version = "0.2.0"
authors = ["Marco Melorio <marco.melorio@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/melix99/tdlib-rs"
repository = "https://github.com/melix99/tdlib-rs"
documentation = "https://docs.rs/tdlib-tl-parser"
description = """
A parser for TDLib's Type Language definitions.
"""
