[package]
name = "tdlib"
version = "0.1.0"
authors = ["Marco Melorio <marco.melorio@protonmail.com>"]
edition = "2021"

[features]
default = ["bots-only-api"]
bots-only-api = []

[dependencies]
log = "0.4"
futures-channel = "0.3"
once_cell = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.12"

[build-dependencies]
tdlib-tl-gen = { path = "../tdlib-tl-gen", version = "0.1" }
tdlib-tl-parser = { path = "../tdlib-tl-parser", version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
