[package]
name = "tdlib"
version = "0.3.1"
authors = ["Marco Melorio <marco.melorio@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/melix99/tdlib-rs"
repository = "https://github.com/melix99/tdlib-rs"
documentation = "https://docs.rs/tdlib"
description = """
Rust wrapper around the Telegram Database Library.
"""

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps]
tdjson = "1.8.8"

[features]
default = ["bots-only-api"]
dox = []
bots-only-api = []

[dependencies]
log = "0.4"
futures-channel = "0.3"
once_cell = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.1"

[build-dependencies]
system-deps = "6"
tdlib-tl-gen = { path = "../tdlib-tl-gen", version = "0.3" }
tdlib-tl-parser = { path = "../tdlib-tl-parser", version = "0.2" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
